# Team-12

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
COS214-Poject/: CMakeLists.txt
COS214-Poject/src/: AdvancedTechnologyDecorator.cpp  AdvancedTechnologyDecorator.h  AirportsFactory.cpp  AirportsFactory.h  BuildingRequirements.cpp  BuildingRequirements.h  ChemicalFactory.cpp  ChemicalFactory.h  CityComponent.cpp  CityComponent.h  CityComposite.cpp  CityComposite.h  CityGame.cpp  CityGame.h  Coal.cpp  Coal.h  CollectionStrategy.cpp  CollectionStrategy.h  Command.cpp  Command.h  CommercialBuilding.cpp  CommercialBuilding.h  CommercialFactory.cpp  CommercialFactory.h  CommercialZoneComposite.cpp  CommercialZoneComposite.h  Concrete.cpp  Concrete.h  ConstructionResourceProcessor.cpp  ConstructionResourceProcessor.h  ConstructionResourceProduct.cpp  ConstructionResourceProduct.h  CrimeState.cpp  CrimeState.h  CrystalCraftIndustry.cpp  CrystalCraftIndustry.h  CulturalCenter.cpp  CulturalCenter.h  CulturalCenterFactory.cpp  CulturalCenterFactory.h  (+185 more)
COS214-Poject/tests/: ConstructionResourceProductTest.cpp  GreenTechnologyDecoratorTests.cpp  IncomeResourceProductTest.cpp  NPCManagerTests.cpp  NPCStatesTests.cpp  ReactingNPCTests.cpp  UtilityDecoratorTests.cpp  UtilityFactoryTests.cpp  UtilityFlyweightTests.cpp
CityBuilderSimulator/: .gitignore  CMakeLists.txt
CityBuilderSimulator/src/: CMakeLists.txt  NPCTestMain.cpp  UtilitiesTestMain.cpp  example.cpp  main.cpp
CityBuilderSimulator/src/City/: Government.cpp  Government.h  concreteTaxCollector.cpp  concreteTaxCollector.h  taxCollector.h
CityBuilderSimulator/src/City/CityComponent/: CityComponent.cpp  CityComponent.h  README.md
CityBuilderSimulator/src/City/CityComponent/CityComposite/: CityComposite.cpp  CityComposite.h  PropertyLaw.cpp  PropertyLaw.h  SalesTax.cpp  SalesTax.h  TaxLaws.h
CityBuilderSimulator/src/City/CityComponent/Commercial/: CollectTaxCommercial.cpp  CollectTaxCommercial.h  CommercialBuilding.cpp  CommercialBuilding.h  CommercialZoneComposite.cpp  CommercialZoneComposite.h  Malls.cpp  Malls.h  Office.cpp  Office.h  Shops.cpp  Shops.h  VisitCommercial.cpp  VisitCommercial.h
CityBuilderSimulator/src/City/CityComponent/Industrial/: CrystalCraftIndustry.cpp  CrystalCraftIndustry.h  IndustrialZoneComposite.cpp  IndustrialZoneComposite.h  Industry.cpp  Industry.h  MetalWorkFacility.cpp  MetalWorkFacility.h  MetalWorks.cpp  MetalWorks.h  WoodAndCoalPlant.cpp  WoodAndCoalPlant.h
CityBuilderSimulator/src/City/CityComponent/Landmark/: LandMark.cpp  LandMark.h  Monument.cpp  Monument.h  Park.cpp
CityBuilderSimulator/src/City/CityComponent/PublicService/: Hospital.cpp  Hospital.h  PoliceStation.h  PublicService.cpp  PublicService.h  School.h
CityBuilderSimulator/src/City/CityComponent/Residential/: CollectTaxResidential.cpp  CollectTaxResidential.h  Estate.cpp  Estate.h  Flat.cpp  Flat.h  House.cpp  House.h  README.md  ResidentialBuilding.cpp  ResidentialBuilding.h  ResidentialZoneComposite.cpp  ResidentialZoneComposite.h  Townhouse.cpp  Townhouse.h  VisitResidential.cpp  VisitResidential.h
CityBuilderSimulator/src/City/CityComponent/Resources/: ChemicalFactory.cpp  ChemicalFactory.h  Coal.cpp  Coal.h  Concrete.cpp  Concrete.h  ConstructionDeliveryTruck.cpp  ConstructionDeliveryTruck.h  ConstructionResourceProduct.cpp  ConstructionResourceProduct.h  ConstructionTruck.h  Diamonds.cpp  Diamonds.h  Gold.cpp  Gold.h  IncomeDeliveryTruck.cpp  IncomeDeliveryTruck.h  IncomeResourceProduct.cpp  IncomeResourceProduct.h  IncomeResourceProduct1.cpp  IncomeResourceProduct1.h  IncomeTruck.cpp  IncomeTruck.h  MetalFactory.cpp  MetalFactory.h  Oil.cpp  Oil.h  PlantFactory.cpp  PlantFactory.h  ResourceFactory.h  ResourcesMain  ResourcesMain.cpp  Steel .cpp  Steel .h  Steel.cpp  Steel.h  Stone.cpp  Stone.h  StoneFactory.cpp  StoneFactory.h  (+2 more)
CityBuilderSimulator/src/City/CityComponent/Transport/: Airports.cpp  Airports.h  PublicTransit.cpp  Roads.cpp  Roads.h  Trains.h  Transport.cpp  Transport.h
CityBuilderSimulator/src/City/CityComponent/Utility/: AdvancedTechnologyDecorator.cpp  AdvancedTechnologyDecorator.h  GreenTechnologyDecorator.cpp  GreenTechnologyDecorator.h  MockCityComposite.cpp  MockCityComposite.h  MockUtility.cpp  MockUtility.h  PowerPlant.cpp  PowerPlant.h  README.md  SewageSystem.cpp  SewageSystem.h  UtilityDecorator.cpp  UtilityDecorator.h  UtilityFactory.cpp  UtilityFactory.h  UtilityFlyweight.cpp  UtilityFlyweight.h  WasteManagement.cpp  WasteManagement.h  WaterSupply.cpp  WaterSupply.h
CityBuilderSimulator/src/City/CityFactory/CommercialBuildingFactory/: CommercialFactory.cpp  CommercialFactory.h  MallsFactory.cpp  MallsFactory.h  OfficeFactory.cpp  OfficeFactory.h  ShopsFactory.cpp  ShopsFactory.h
CityBuilderSimulator/src/City/CityFactory/IndustrialFactory/: IndustrialFactory.cpp  IndustrialFactory.h  OilRefineryFactory.cpp  OilRefineryFactory.h  SawMillFactory.cpp  SawMillFactory.h  SmelterFactory.cpp  SmelterFactory.h
CityBuilderSimulator/src/City/CityFactory/LandmarkFactory/: CulturalCenterFactory.cpp  CulturalCenterFactory.h  LandMarkFactory.cpp  LandMarkFactory.h  MonumentFactory.cpp  MonumentFactory.h  ParkFactory.cpp  ParkFactory.h
CityBuilderSimulator/src/City/CityFactory/PublicServiceFactory/: FireStationFactory.cpp  FireStationFactory.h  HospitalFactory.cpp  HospitalFactory.h  PoliceStationFactory.cpp  PoliceStationFactory.h  PublicServiceFactory.h  SchoolFactory.cpp  SchoolFactory.h
CityBuilderSimulator/src/City/CityFactory/ResidentialBuildingFactory/: EstateFactory.cpp  EstateFactory.h  FlatFactory.cpp  HouseFactory.cpp  HouseFactory.h  (+4 more)
CityBuilderSimulator/src/City/NPCs/: NPCManager.cpp  NPCManager.h
CityBuilderSimulator/src/GameLoop/: GameLoop.txt
CityBuilderSimulator/src/include/project/: example.h
CityBuilderSimulator/tests/: CMakeLists.txt  GreenTechnologyDecoratorTests.cpp  IncomeResourceProductTest.cpp  NPCManagerTests.cpp  NPCStatesTests.cpp  ReactingNPCTests.cpp  UtilityDecoratorTests.cpp  UtilityFactoryTests.cpp  UtilityFlyweightTests.cpp  example_test.cpp
(+2603 files in other folders)
